upgrade libraries and adjust code to suit